Resolves: tdf#101963 loading zh-TW ROC calendar use EE|E instead of YYYY|YY

This still (unnecessarily) prefixes with [~ROC] but preserves the
intended "no leading zero" semantics.

Change-Id: I154be0978a8147ceddefcb546c257d44f770b5de